--- a/index.html
+++ b/index.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Stock It</title>
+    <title>Stock Inventory Control</title>
 </head>
 <body>
-    
+    <nav class="top-nav">
+        <img src="./images/img 1.jpg">
+        <h3 nav-heading>Stock Inventory Control</h3>
+        <ul>
+            <li class="createProduct">Create new Product</li>
+            <li class="updateProduct">Update Product</li>
+            <li class="deleteProduct">Delete Product</li>
+            <li class="readProduct">Read all Products</li>
+            <li class="searchProduct">Search Products</li>
+        </ul>
+    </nav>
 </body>
 </html>
