added aside bar and section bar

--- a/index.html
+++ b/index.html
@@ -18,5 +18,34 @@
             <li class="searchProduct">Search Products</li>
         </ul>
     </nav>
+    <main class="main-content">
+        <aside class="asideBar">
+            <div class="createProduct"><span>Create new Product</span>
+                <div class="create"></div>
+            </div>
+            <div class="updateProducts"><span>Update Product</span>
+                <div class="update"></div>
+            </div>
+            <div class="deleteproduct"><span>Delete Product</span>
+                <div class="delete"></div>
+            </div>
+            <div class="readProduct"><span>Read all Products</span>
+                <div class="read"></div>
+            </div>
+            <div class="searchProduct"><span>Search<div><i class="fas fa-search"></i></span></span>
+                <div class="search"></div>
+            </div>
+            <div class="salesCounter"><span>Counter</span>
+                <div class="sales"></div>
+            </div>
+            <div class="purchase"><span>Purchase</span>
+                <div class="purchaseCounter"></div>
+            </div>
+            
+        </aside>
+        <section class="section">
+        </section>
+    </main>
+    <script src="https://kit.fontawesome.com/b4d603d74f.js"></script>
 </body>
 </html>
