removed font-awesome search icon

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="readProduct"><span>Read all Products</span>
                 <div class="read"></div>
             </div>
-            <div class="searchProduct"><span>Search<div><i class="fas fa-search"></i></span></span>
+            <div class="searchProduct"><span>Search<!--<div><i class="fas fa-search"></i></div>--></span>
                 <div class="search"></div>
             </div>
             <div class="salesCounter"><span>Counter</span>
