added the indexparagraph

--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
             
         </aside>
         <section class="section">
+            <h4>WE HAVE WHAT IT TAKES TO MAKE YOUR BUSINESS SEAMLESS</h4>
+            <P>Accurate inventory control is important to make sure your business 
+                has adequate supplies and products to complete customer orders, 
+                without disrupting order fulfillment.</P>
         </section>
     </main>
     <script src="https://kit.fontawesome.com/b4d603d74f.js"></script>
