added top-nav css

--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Stock Inventory Control</title>
+    <link rel="stylesheet" href="./css/index.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav class="top-nav">
         <img src="./images/img 1.jpg">
-        <h3 nav-heading>Stock Inventory Control</h3>
         <ul>
             <li class="createProduct">Create new Product</li>
             <li class="updateProduct">Update Product</li>
