--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <nav class="top-nav">
         <img src="./images/img 1.jpg">
         <ul>
+            <li class="home"><a href="index.html">Home</a></li>
             <li class="createProduct">Create new Product</li>
             <li class="updateProduct">Update Product</li>
             <li class="deleteProduct">Delete Product</li>
