--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         <img src="./images/img 1.jpg">
         <ul>
             <li class="home"><a href="index.html">Home</a></li>
-            <li class="createProduct">Create new Product</li>
-            <li class="updateProduct">Update Product</li>
-            <li class="deleteProduct">Delete Product</li>
-            <li class="readProduct">Read all Products</li>
-            <li class="searchProduct">Search Products</li>
+            <li class="createProduct"><a href="#">Create new Product</a></li>
+            <li class="updateProduct"><a href="#">Update Product</a></li>
+            <li class="deleteProduct"><a href="#">Delete Product</a></li>
+            <li class="readProduct"><a href="#"> Read all Products</a></li>
+            <li class="searchProduct"><a href="#">Search Products</a></li>
         </ul>
     </nav>
     <main class="main-content">
