--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Stock Inventory Control</title>
     <link rel="stylesheet" href="./css/index.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+    <link rel="icon" href="./images/img 1.jpg" type="image/jpg" />
 </head>
 <body>
     <nav class="top-nav">
