added table for products

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <li class="home"><a href="index.html">Home</a></li>
             <li class="createProduct"><a href="create.html">Create new Product</a></li>
             <li class="updateProduct"><a href="#">Update Product</a></li>
-           <li class="readProduct"><a href="#"> Read all Products</a></li>
+           <li class="readProduct"><a href="read.html"> Read all Products</a></li>
             <li class="searchProduct"><a href="#">Search Products</a></li>
         </ul>
     </nav>
@@ -30,7 +30,7 @@
                 <a href="#">Update Product</a>
             </div>
             <div class="readProduct">
-                <a href="#">Read all Products</a>
+                <a href="read.html">Read all Products</a>
             </div>
             <div class="searchProduct">
                 <a href="#">Search</a>
