--- a/read.html
+++ b/read.html
@@ -43,17 +43,19 @@
             </div>
         </aside>
         <section class="section-create">
-                <table class="table table-hover table-dark">
-                        <thead>
-                          <tr>
-                            <th scope="col">S/N</th>
-                            <th scope="col">Product Name</th>
-                            <th scope="col">Product Quantity</th>
-                            <th scope="col">Product Price</th>
-                            <th scope="col">Product ExpDate</th>
-                            <th scope="col">Action</th>
-                          </tr>
-                        </thead>
-                        <tbody id="product details"></tbody>
-                </table>
+            <table class="table table-hover table-dark">
+                <thead>
+                    <tr>
+                    <th scope="col">S/N</th>
+                    <th scope="col">Product Name</th>
+                    <th scope="col">Product Quantity</th>
+                    <th scope="col">Product Price</th>
+                    <th scope="col">Product ExpDate</th>
+                    <th scope="col">Action</th>
+                    </tr>
+                </thead>
+                <tbody id="product details"></tbody>
+            </table>
         </section>
+    </body>
+</html>
