updated read product page

--- a/read.html
+++ b/read.html
@@ -35,12 +35,12 @@
             <div class="searchProduct">
                 <a href="#">Search</a>
             </div>
-            <div class="salesCounter">
+            <!-- <div class="salesCounter">
                 <a href="#">Counter</a>
             </div>
             <div class="purchase">
                 <a href="#">Purchase</a>
-            </div>
+            </div> -->
         </aside>
         <section class="section-create">
             <table class="table table-hover table-dark">
