--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
             <div class="searchProduct">
                 <a href="#">Search</a>
             </div>
-            <div class="salesCounter">
+            <!-- <div class="salesCounter">
                 <a href="#">Counter</a>
             </div>
             <div class="purchase">
                 <a href="#">Purchase</a>
-            </div>
+            </div>-->
         </aside>
         <section class="section">
             <h4>WE HAVE WHAT IT TAKES TO MAKE YOUR BUSINESS SEAMLESS</h4>
