--- a/create.html
+++ b/create.html
@@ -44,28 +44,27 @@
             </div> -->
         </aside>
         <section class="section-create">
-            <div class="form">
-                <form>
-                    <div class="form-group">
-                        <label for="name-of-product">Product name</label>
-                        <input type="text" class="form-control" id="product-name" placeholder="Enter Product name">
-                    </div>
-                    <div class="form-group">
-                        <label for="quantity">Quantity</label>
-                        <input type="number" class="form-control" id="product-quantity" placeholder="enter the quantity">
-                    </div>
-                    <div class="form-group">
-                        <label for="price-of-product">Product price</label>
-                        <input type="text" class="form-control" id="product-price" placeholder="Enter Product price">
-                    </div>
-                    <div class="form-group">
-                        <label for="product-exp">ExpDate</label>
-                        <input type="date" class="form-control" id="ExpDate">
-                    </div>
-                    <button type="button" class="btn btn-danger">Cancel</button>
-                    <button type="submit" class="btn btn-success">Submit</button>
-                </form>
-            </div>
+            <form class="form-field">
+                <div class="form-group">
+                    <label for="name-of-product">Product name</label>
+                    <input type="text" class="form-control" id="product-name" placeholder="Enter Product name">
+                </div>
+                <div class="form-group">
+                    <label for="quantity">Quantity</label>
+                    <input type="number" class="form-control" id="product-quantity" placeholder="enter the quantity">
+                </div>
+                <div class="form-group">
+                    <label for="price-of-product">Product price</label>
+                    <input type="text" class="form-control" id="product-price" placeholder="Enter Product price">
+                </div>
+                <div class="form-group">
+                    <label for="product-exp">ExpDate</label>
+                    <input type="date" class="form-control" id="ExpDate">
+                </div>
+                <button type="button" class="btn btn-danger">Cancel</button>
+                <button type="submit" class="btn btn-success">Submit</button>
+            </form>
         </section>
+    </main>
 </body>
 </html>
