updated search page

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <li class="createProduct"><a href="create.html">Create new Product</a></li>
             <li class="updateProduct"><a href="#">Update Product</a></li>
            <li class="readProduct"><a href="read.html"> Read all Products</a></li>
-            <li class="searchProduct"><a href="#">Search Products</a></li>
+            <li class="searchProduct"><a href="search.html">Search Products</a></li>
         </ul>
     </nav>
     <main class="main-content">
@@ -33,7 +33,7 @@
                 <a href="read.html">Read all Products</a>
             </div>
             <div class="searchProduct">
-                <a href="#">Search</a>
+                <a href="search.html">Search</a>
             </div>
             <!-- <div class="salesCounter">
                 <a href="#">Counter</a>
