--- a/search.html
+++ b/search.html
@@ -7,6 +7,7 @@
     <title>Stock Inventory Control</title>
     <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="./css/bootstrap-4.3.1/dist/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="icon" href="./images/img 1.jpg" type="image/jpg" />
 </head>
 <body>
@@ -42,20 +43,23 @@
                 <a href="#">Purchase</a>
             </div> -->
         </aside>
-        <section class="section-read-products">
-            <table class="table table-hover table-dark">
-                <thead>
-                    <tr>
-                    <th scope="col">S/N</th>
-                    <th scope="col">Product Name</th>
-                    <th scope="col">Product Quantity</th>
-                    <th scope="col">Product Price</th>
-                    <th scope="col">Product ExpDate</th>
-                    <th scope="col">Action</th>
-                    </tr>
-                </thead>
-                <tbody id="product details"></tbody>
-            </table>
+        <section class="section-create">
+            <form class="form-field">
+                <div class="form-group">
+                    <label for="search-name">Product name</label>
+                    <input type="text" class="form-control" id="search-name" placeholder="Enter Product name">
+                </div>
+                <div class="form-group">
+                    <label for="price-range">Price range</label>
+                    <input type="text" class="form-control" id="price-range" placeholder="Enter price range">
+                </div>
+                <div class="form-group">
+                    <label for="exp-date">Expires on/before</label>
+                    <input type="month" class="form-control" id="exp-date">
+                </div>
+                <button type="submit" class="btn btn-primary">Search</button>
+            </form>
         </section>
-    </body>
+    </main>
+</body>
 </html>
