added edit/update functionality and  delete functionality

--- a/public/read.html
+++ b/public/read.html
@@ -16,7 +16,7 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="create.html">Create new Product</a></li>
-            <li class="updateProduct"><a href="#">Update Product</a></li>
+            <li class="updateProduct"><a href="update.html">Update Product</a></li>
             <li class="readProduct"><a href="read.html"> Read all Products</a></li>
             <li class="searchProduct"><a href="search.html">Search Products</a></li>
         </ul>
@@ -27,7 +27,7 @@
                 <a href="create.html">Create new Product</a>
             </div>
             <div class="updateProducts">
-                <a href="#">Update Product</a>
+                <a href="update.html">Update Product</a>
             </div>
             <div class="readProduct">
                 <a href="read.html">Read all Products</a>
