--- a/public/update.html
+++ b/public/update.html
@@ -41,8 +41,8 @@
             <!-- <p class="createMessage"></p> -->
             <form class="form-field" id="myform">
                 <div class="form-group">
-                    <label for="name-of-product">Product name</label>
-                    <input type="text" class="form-control" id="product-name" placeholder="Enter Product name">
+                    <!-- <label for="name-of-product">Product name</label>
+                    <input type="text" class="form-control" id="product-name" placeholder="Enter Product name"> -->
                 </div>
                 <div class="form-group">
                     <label for="quantity">Quantity</label>
@@ -57,7 +57,7 @@
                     <input type="date" class="form-control" id="ExpDate">
                 </div>
                 <button type="button" class="btn btn-danger" id="cancel">Cancel</button>
-                <button type="submit" class="btn btn-success" id="submit">Submit</button>
+                <button type="submit" class="save btn btn btn-success" id="Save">Save</button>
             </form>
         </section>
     </main>
